...
        "IQ" to "이라크",
        "IR" to "이란",
        "IS" to "아이슬란드",
        "IT" to "이탈리아",
        "JM" to "자메이카",
        "JO" to "요르단",
        "JP" to "일본",
        "KE" to "케냐",
        "KG" to "키르기스스탄",
        "KH" to "캄보디아",
        "KP" to "북한",
        "KR" to "대한민국",
        "KW" to "쿠웨이트",
...
